--- a/node/8.10.0/Dockerfile
+++ b/node/8.10.0/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:8.10.0
+FROM node:$BASE_TAG
 LABEL maintainer "Guild Engineering <engineering@guildeducation.com>"
 
-ENV CC_TEST_REPORTER_VERSION=0.6.2
+ENV CC_TEST_REPORTER_VERSION=$CC_TEST_REPORTER_VERSION
 RUN curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-${CC_TEST_REPORTER_VERSION}-linux-amd64 > /usr/local/bin/cc-test-reporter && \
     chmod +x /usr/local/bin/cc-test-reporter
