--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,18 +42,22 @@ workflows:
   build_and_publish_docker_images:
     jobs:
       - build_and_publish_ruby_images:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              # only: master
+              only: /./
       - build_and_publish_node_images:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              # only: master
+              only: /./
       - build_and_publish_rails_images:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              # only: master
+              only: /./
       - build_and_publish_node_lambda:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              # only: master
+              only: /./
