--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,19 +45,19 @@ workflows:
           filters:
             branches:
               # only: master
-              only: /./
+              only: /.*/
       - build_and_publish_node_images:
           filters:
             branches:
               # only: master
-              only: /./
+              only: /.*/
       - build_and_publish_rails_images:
           filters:
             branches:
               # only: master
-              only: /./
+              only: /.*/
       - build_and_publish_node_lambda:
           filters:
             branches:
               # only: master
-              only: /./
+              only: /.*/
