--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,10 @@
 defaults: &defaults
   docker:
-    - image: debian
+    - image: circleci/node
   steps:
     - checkout
-    - setup_remote_docker
+    - setup_remote_docker:
+        docker_layer_caching: true
     - run:
         name: Build Docker images
         command: |
