--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 defaults: &defaults
-  docker:
-    - image: circleci/python
+  executor: docker-publish/docker
   steps:
     - checkout
     - setup_remote_docker:
@@ -15,6 +14,9 @@ defaults: &defaults
     #       bin/publish.sh
 
 version: 2.1
+
+orbs:
+  docker-publish: circleci/docker-publish@0.1.6
 
 jobs:
   build_and_publish_ruby_images:
