Add docker-publish/check back to config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ defaults: &defaults
     - checkout
     - setup_remote_docker:
         docker_layer_caching: true
+    - docker-publish/check
     - run:
         name: Build Docker images
         command: |
