--- a/python-lambda/Dockerfile
+++ b/python-lambda/Dockerfile
@@ -1,8 +1,10 @@
-# This is pinned to match the AWS Lambda node 8.10 runtime, see: https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
-FROM circleci/python:3.6.4
+FROM circleci/python:3.6.9
 
 ENV CC_TEST_REPORTER_VERSION=0.6.2
-RUN pip install -U --user pytest==5.0.1 && \
+RUN curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-${CC_TEST_REPORTER_VERSION}-linux-amd64 > ~/cc-test-reporter && \
+    chmod +x ~/cc-test-reporter && \
+    sudo mv ~/cc-test-reporter /usr/local/bin/cc-test-reporter && \
+    pip install -U --user pytest==5.0.1 && \
     pip install -U --user boto3==1.9.192 && \
     pip install -U --user awscli==1.16.202 && \
     pip install -U --user aws-sam-cli==0.18.0
