--- a/python-lambda/Dockerfile
+++ b/python-lambda/Dockerfile
@@ -4,7 +4,8 @@ ENV CC_TEST_REPORTER_VERSION=0.6.2
 RUN curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-${CC_TEST_REPORTER_VERSION}-linux-amd64 > ~/cc-test-reporter && \
     chmod +x ~/cc-test-reporter && \
     sudo mv ~/cc-test-reporter /usr/local/bin/cc-test-reporter && \
-    export PATH=~/.local/bin/:$PATH && \
+    USER_BASE_PATH=$(python -m site --user-base) && \
+    export PATH=$PATH:$USER_BASE_PATH/bin && \
     pip install -U --user pytest==5.0.1 && \
     pip install -U --user boto3==1.9.192 && \
     pip install -U --user awscli==1.16.202 && \
