--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,10 @@ jobs:
     <<: *defaults
     environment:
       TARGET_DIRECTORY: python-lambda
+  build_and_publish_python_serverless:
+    <<: *defaults
+    environment:
+      TARGET_DIRECTORY: python-serverless
 
 workflows:
   build_and_publish_docker_images:
@@ -52,3 +56,4 @@ workflows:
       - build_and_publish_rails_images
       - build_and_publish_node_lambda
       - build_and_publish_python_lambda
+      - build_and_publish_python_serverless
