fixing typo in python-serverless 2

--- a/python-serverless/2/Dockerfile
+++ b/python-serverless/2/Dockerfile
@@ -10,7 +10,7 @@ RUN curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-${CC_T
     pip install -U --user pytest==5.0.1 && \
     pip install -U --user boto3==1.15.36 && \
     pip install -U --user awscli==1.18.36 && \
-    pip install -U --user aws-sam-cli==0.47.0
+    pip install -U --user aws-sam-cli==0.47.0 && \
     pip install -U --user pyscopg2-binary==2.8.4 && \
     echo "Installing CDK" && \
     sudo npm install -g aws-cdk && \
