--- a/qa/node-aws-qa/Dockerfile
+++ b/qa/node-aws-qa/Dockerfile
@@ -2,6 +2,8 @@ FROM node:14.6.0-alpine3.10
 
 RUN apk add docker-cli
 
+RUN apk add git
+
 RUN apk add python make g++
 
 RUN apk add --no-cache python py-pip
